// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PanelWithDetails /> PanelWithDetails - bottom controls 1`] = `
<div
  className="panel-show-details panel-show-details-bottom panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <a
        aria-expanded={false}
        className="collapsed"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-right fa-fw icon-addon-right"
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Show details
      </a>
    </div>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - custom labels 1`] = `
<div
  className="panel-show-details panel-show-details-top panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <a
        aria-expanded={false}
        className="collapsed"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-right fa-fw icon-addon-right"
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Show
      </a>
    </div>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - default 1`] = `
<div
  className="panel-show-details panel-show-details-top panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <a
        aria-expanded={false}
        className="collapsed"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-right fa-fw icon-addon-right"
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Show details
      </a>
    </div>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - default expanded 1`] = `
<div
  className="panel-show-details panel-show-details-top panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <a
        aria-expanded={true}
        className=""
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-down fa-fw icon-addon-right"
          data-icon="angle-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 384 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Hide details
      </a>
    </div>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse in"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;

exports[`<PanelWithDetails /> PanelWithDetails - small preview 1`] = `
<div
  className="panel-show-details panel-show-details-top panel-preview panel-preview-small panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <a
        aria-expanded={false}
        className="collapsed"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-angle-right fa-fw icon-addon-right"
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M64 448c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L178.8 256L41.38 118.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25l-160 160C80.38 444.9 72.19 448 64 448z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Show details
      </a>
    </div>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      content
    </div>
  </div>
</div>
`;
